hasqd/tests/coptest/system/pos/003.sts
#!/bin/sh
$1/zdb erasedisk "create _md5 wrd MD5 1 [abc] 1 0"
$1/hasqd -c s=002.inp dsvt=1 dprn=1
$1/zdb erasedisk

