hasqd/tests/coptest/system/neg/001.sts
#!/bin/sh
$1/hasqd -lncq s=001.inp dsvt=1

